--- a/Frontend/src/components/serviceList/styles/ServiceList.module.css
+++ b/Frontend/src/components/serviceList/styles/ServiceList.module.css
@@ -36,10 +36,9 @@
 .thumbNail {
   width: 190px;
   height: 120px;
-  min-height: 98.19px;
+
   object-fit: cover;
   border-radius: 7px;
-  transition-duration: 0.2s;
 }
 
 .infobox {
@@ -56,6 +55,7 @@
   padding-top: 220px;
   padding-bottom: 150px;
   gap: 10px;
+  row-gap: 30px;
 }
 
 .changeBox {
@@ -66,11 +66,12 @@
   border-radius: 12px;
   letter-spacing: -0.5px;
   padding: 15px 15px;
+  cursor: pointer;
 }
 
 .changeThumbNail {
   width: 100%;
-
+  height: 200px;
   border-radius: 7px;
   object-fit: cover;
 }
@@ -99,7 +100,7 @@
 /* 반응형 */
 @media (max-width: 900px) {
   .wrap {
-    padding-right: 15px;
+    margin: 0px 15px;
   }
 
   .box {
